--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cosmo/bootstrap.min.css" />
 <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{% block extra_head %}{% endblock %}
 </head>
 <body>
     {% block content %}
