blog.models.Post 모델에 lnglat 필드를 추가하고, 입력된 경도/위도에 맞춰 구글맵 노출

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,21 +13,26 @@
     }
 </style>
 
-<script>
-$(function() {
-    var myLatLng = {lat: -25.363, lng: 131.044};
-    var container = $('.post-map')[0];
-    var map = new google.maps.Map(container, {
-        zoom: 4,
-        center: myLatLng
+{% if post.lnglat %}
+    <script>
+    $(function() {
+        var lat = {{ post.lat }};
+        var lng = {{ post.lng }};
+
+        var myLatLng = {lat: lat, lng: lng};
+        var container = $('.post-map')[0];
+        var map = new google.maps.Map(container, {
+            zoom: 15,
+            center: myLatLng
+        });
+        var marker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+            title: 'Hello World!'
+        });
     });
-    var marker = new google.maps.Marker({
-        position: myLatLng,
-        map: map,
-        title: 'Hello World!'
-    });
-});
-</script>
+    </script>
+{% endif %}
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 {% endblock %}
 
