--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,9 +1,12 @@
+{% extends "accounts/layout.html" %}
 
-<h1>{{ user }}'s Profile</h1>
+{% block content %}
+    <h1>{{ user }}'s Profile</h1>
 
-<table>
-    <tr><th>username</th><td>{{ user.username }}</td></tr>
-    <tr><th>email</th><td>{{ user.email }}</td></tr>
-    <tr><th>date_joined</th><td>{{ user.date_joined}}</td></tr>
-</table>
+    <table>
+        <tr><th>username</th><td>{{ user.username }}</td></tr>
+        <tr><th>email</th><td>{{ user.email }}</td></tr>
+        <tr><th>date_joined</th><td>{{ user.date_joined}}</td></tr>
+    </table>
+{% endblock %}
 
