--- a/accounts/templates/accounts/signup_form.html
+++ b/accounts/templates/accounts/signup_form.html
@@ -1,8 +1,12 @@
-<form action="" method="post">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <input type="submit" />
-</form>
+{% extends "accounts/layout.html" %}
+
+{% block content %}
+    <form action="" method="post">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+        </table>
+        <input type="submit" />
+    </form>
+{% endblock %}
 
