--- a/photowall/templates/layout.html
+++ b/photowall/templates/layout.html
@@ -10,7 +10,43 @@
 {% block extra_head %}{% endblock %}
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+
+    <nav class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">PhotoWall</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <ul class="nav navbar-nav pull-right">
+                    {% if not user.is_authenticated %}
+                        <li><a href="{% url "login" %}">Login</a></li>
+                        <li><a href="{% url "signup" %}">Signup</a></li>
+                    {% else %}
+                        <li><a href="{% url "profile" %}">Profile</a></li>
+                    {% endif %}
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 </body>
 </html>
