--- a/photowall/templates/layout.html
+++ b/photowall/templates/layout.html
@@ -30,10 +30,11 @@
                 </ul>
                 <ul class="nav navbar-nav pull-right">
                     {% if not user.is_authenticated %}
-                        <li><a href="{% url "login" %}">Login</a></li>
+                        <li><a href="{% url "login" %}?next={{ request.path }}">Login</a></li>
                         <li><a href="{% url "signup" %}">Signup</a></li>
                     {% else %}
                         <li><a href="{% url "profile" %}">Profile</a></li>
+                        <li><a href="{% url "logout" %}?next={{ request.path }}">Logout</a></li>
                     {% endif %}
                 </ul>
             </div><!--/.nav-collapse -->
